A wire-maven-plugin execution imports as a [generate.wire] recipe over com.squareup.wire:wire-compiler whose proto source is the jar a maven-dependency-plugin execution unpacked, a generator entry unpacks a jar into ${unpacked} and contributes test-sources the test compile reads, and a generator's args carry the worker's own ${…} vocabulary past the manifest's environment check